# workflow-engine/api/openapi/apidocs.swagger.json
@@ -23,6 +23,36 @@
     "application/json"
   ],
   "paths": {
+    "/v1/projects/{projectId}/dashboard/stats": {
+      "get": {
+        "operationId": "WorkflowService_GetDashboardStats",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetDashboardStatsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "WorkflowService"
+        ]
+      }
+    },
     "/v1/projects/{projectId}/executions": {
       "get": {
         "operationId": "WorkflowService_ListExecutions",
@@ -568,6 +598,28 @@
         "FAILED"
       ],
       "default": "EXECUTION_STATE_UNSPECIFIED"
+    },
+    "v1GetDashboardStatsResponse": {
+      "type": "object",
+      "properties": {
+        "totalWorkflows": {
+          "type": "string",
+          "format": "int64"
+        },
+        "totalExecutions": {
+          "type": "string",
+          "format": "int64"
+        },
+        "runningExecutions": {
+          "type": "string",
+          "format": "int64"
+        },
+        "successRate": {
+          "type": "number",
+          "format": "double",
+          "title": "Percentage (0-100)"
+        }
+      }
     },
     "v1GetExecutionResponse": {
       "type": "object",
